--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-unity-webgl": "^10.1.6",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
